Many issues fixed. Market and products added.

--- a/app/src/main/res/layout/post_search_layout.xml
+++ b/app/src/main/res/layout/post_search_layout.xml
@@ -127,6 +127,7 @@
                         app:tagBackgroundColor="@color/colorPrimary" />
 
                     <View
+                        
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/sperator"
                         android:layout_marginBottom="@dimen/md_margin"
@@ -180,6 +181,7 @@
                         app:tagBackgroundColor="@color/colorPrimary" />
 
                     <View
+                        android:id="@+id/cityLine"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/sperator"
                         android:layout_marginBottom="@dimen/md_margin"
