--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -123,6 +123,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentEnd="true"
+                                android:visibility="gone"
                                 android:layout_alignParentRight="true"
                                 android:orientation="vertical">
                                 
@@ -147,7 +148,37 @@
                                     android:textStyle="bold" />
                             
                             </LinearLayout>
-                            
+    
+    
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentEnd="true"
+                                android:visibility="visible"
+                                android:layout_alignParentRight="true"
+                                android:orientation="vertical">
+        
+                                <android.support.v7.widget.AppCompatTextView
+                                    style="@style/AppTheme.TextAppearanceSmall"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text="@string/balance"
+                                    android:textAlignment="gravity"
+                                    android:textColor="@color/lightGray" />
+        
+                                <android.support.v7.widget.AppCompatTextView
+                                    android:id="@+id/balance"
+                                    style="@style/AppTheme.TextAppearance"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:text=""
+                                    android:textAlignment="gravity"
+                                    android:textColor="@color/white"
+                                    android:textStyle="bold" />
+    
+                            </LinearLayout>
                             <LinearLayout
                                 android:id="@+id/emailLayout"
                                 android:layout_width="wrap_content"
