--- a/app/src/main/res/layout/activity_job_details.xml
+++ b/app/src/main/res/layout/activity_job_details.xml
@@ -277,6 +277,7 @@
             android:text="@string/Description"
             android:textColor="@color/grayDarkTextColor"
             android:textSize="12sp"
+            android:autoLink="web"
             android:textStyle="bold"
             android:visibility="visible"
             app:layout_constraintStart_toStartOf="parent"
@@ -575,7 +576,7 @@
             android:layout_weight="1"
             android:visibility="gone"
             app:cardBackgroundColor="@color/transparent"
-            app:cardCornerRadius="20dp"
+            app:cardCornerRadius="@dimen/cardview_default_radius"
             app:cardElevation="@dimen/elevation"
             app:cardUseCompatPadding="true"
             app:layout_constraintEnd_toEndOf="parent"
