--- a/app/src/main/res/layout/business_guide_details_layout.xml
+++ b/app/src/main/res/layout/business_guide_details_layout.xml
@@ -71,12 +71,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorPrimaryDark"
+                android:elevation="10dp"
                 android:fillViewport="true"
                 android:orientation="vertical"
                 android:paddingStart="10dp"
-                android:paddingEnd="10dp"
                 
-                android:elevation="10dp"
+                android:paddingEnd="10dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
@@ -410,7 +410,7 @@
                                 android:paddingEnd="@dimen/zero"
                                 android:paddingRight="@dimen/zero"
                                 android:paddingBottom="10dp"
-                                
+                                android:autoLink="web"
                                 android:text="Ad desctiption that advert about they add, description the app about the description the app about the plah plah ....."
                                 android:textAlignment="gravity"
                                 android:textColor="@color/grayDarkTextColor"
@@ -423,6 +423,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/md_margin"
+                                android:layout_marginTop="8dp"
                                 android:text="@string/ServicesAndProducts"
                                 android:textColor="@color/profileHeaderColor"
                                 android:textStyle="bold"
@@ -468,6 +469,7 @@
                                 style="@style/AppTheme.TextAppearance"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                android:layout_marginTop="20dp"
                                 android:padding="@dimen/md_margin"
                                 android:text="@string/job_offers"
                                 android:textColor="@color/profileHeaderColor"
