--- a/app/src/main/res/layout/job_search_item_layout.xml
+++ b/app/src/main/res/layout/job_search_item_layout.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="10dp"
+    app:cardCornerRadius="@dimen/cardview_default_radius"
     app:cardUseCompatPadding="true">
     
     <android.support.constraint.ConstraintLayout
