--- a/app/src/main/res/layout/post_details_layout.xml
+++ b/app/src/main/res/layout/post_details_layout.xml
@@ -166,6 +166,7 @@
                                     android:textColor="@color/white" />
                                 
                                 <LinearLayout
+                                    android:id="@+id/dateLayout"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentEnd="true"
@@ -320,52 +321,121 @@
                                         android:textStyle="bold" />
                                 
                                 </LinearLayout>
-                            
+    
+                                <LinearLayout
+                                    android:id="@+id/priceLayout"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_below="@id/dateLayout"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_alignParentRight="true"
+                                    android:layout_gravity="center_vertical"
+                                    android:layout_marginTop="10dp"
+                                    android:gravity="center"
+                                    android:maxLines="1"
+                                    android:paddingStart="@dimen/md_padding"
+                                    android:paddingLeft="@dimen/md_padding"
+                                    android:paddingTop="@dimen/md_padding"
+                                    android:paddingEnd="@dimen/md_padding"
+                                    android:paddingRight="@dimen/md_padding"
+                                    android:paddingBottom="@dimen/md_padding"
+                                    android:text="Price"
+                                    android:textAlignment="gravity"
+                                    android:textColor="@color/white"
+                                    android:textSize="12sp"
+                                    android:visibility="visible"
+                                    app:layout_constraintEnd_toEndOf="parent"
+                                    app:layout_constraintTop_toBottomOf="@id/dateLayout"
+                                    android:orientation="vertical">
+        
+                                    <android.support.v7.widget.AppCompatTextView
+                                        style="@style/AppTheme.TextAppearanceSmall"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_gravity="end|right"
+                                        android:text="@string/price"
+                                        android:textAlignment="gravity"
+                                        android:textColor="@color/lightGray" />
+    
+                                    <TextView
+                                        android:id="@+id/price"
+                                        style="@style/AppTheme.TextAppearance"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:layout_below="@id/dateLayout"
+                                        android:layout_alignParentEnd="true"
+                                        android:layout_alignParentRight="true"
+                                        android:layout_gravity="center_vertical"
+                                        android:layout_marginTop="10dp"
+                                        android:gravity="center"
+                                        android:maxLines="1"
+                                        android:paddingStart="@dimen/md_padding"
+                                        android:paddingLeft="@dimen/md_padding"
+                                        android:paddingTop="@dimen/md_padding"
+                                        android:paddingEnd="@dimen/md_padding"
+                                        android:paddingRight="@dimen/md_padding"
+                                        android:paddingBottom="@dimen/md_padding"
+                                        android:text="Price"
+                                        android:textAlignment="gravity"
+                                        android:textColor="@color/white"
+                                        android:textSize="12sp"
+                                        android:visibility="visible"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintTop_toBottomOf="@id/dateLayout" />
+    
+                                </LinearLayout>
+                          
                             
                             </RelativeLayout>
-                            
-                            <TextView
-                                android:id="@+id/price"
-                                style="@style/AppTheme.TextAppearance"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentEnd="true"
-                                android:layout_alignParentRight="true"
-                                android:layout_gravity="center_vertical"
-                                android:background="@color/colorPrimaryDark"
-                                android:gravity="center"
-                                android:maxLines="1"
-                                android:paddingStart="@dimen/md_padding"
-                                android:paddingLeft="@dimen/md_padding"
-                                android:paddingTop="@dimen/md_padding"
-                                android:paddingEnd="@dimen/md_padding"
-                                android:paddingRight="@dimen/md_padding"
-                                android:paddingBottom="@dimen/md_padding"
-                                android:text="Price"
-                                android:textAlignment="gravity"
-                                android:textColor="@color/white"
-                                android:textSize="12sp"
-                                android:visibility="gone"
-                                app:layout_constraintEnd_toEndOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
+                        
+                        
                         </android.support.constraint.ConstraintLayout>
                         
                         <android.support.constraint.ConstraintLayout
                             android:layout_width="match_parent"
-                            android:layout_height="0dp"
+                            android:layout_height="wrap_content"
                             android:background="@color/white"
-                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:paddingBottom="10dp"
                             app:layout_constraintTop_toBottomOf="@id/info_Layout">
                             
                             <android.support.v7.widget.AppCompatTextView
                                 android:id="@+id/postDescriptionTitle"
                                 style="@style/AppTheme.TextAppearance"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:padding="@dimen/md_margin"
                                 android:text="@string/Description"
                                 android:textColor="@color/profileHeaderColor"
-                                android:textStyle="bold" />
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="@id/deactivateBtn"
+                                app:layout_constraintTop_toTopOf="@id/deactivateBtn" />
+                            
+                            <android.support.v7.widget.CardView
+                                android:id="@+id/deactivateBtn"
+                                android:layout_width="wrap_content"
+                                android:layout_height="55dp"
+                                android:layout_marginTop="5dp"
+                                android:visibility="invisible"
+                                app:cardBackgroundColor="@color/white"
+                                app:cardCornerRadius="10dp"
+                                app:cardElevation="@dimen/elevation"
+                                app:cardUseCompatPadding="true"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintTop_toTopOf="parent">
+                                
+                                <android.support.v7.widget.AppCompatButton
+                                    android:id="@+id/deactivate"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_weight="1"
+                                    android:background="@drawable/red_border"
+                                    android:text="@string/deactivate"
+                                    android:textColor="@color/red"
+                                    android:textSize="12sp"
+                                    android:textStyle="bold" />
+                            </android.support.v7.widget.CardView>
+                            
+                            
                             
                             <View
                                 android:id="@+id/categorySperator"
@@ -383,22 +453,23 @@
                                 style="@style/AppTheme.TextAppearance"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
+                                
                                 android:layout_gravity="start|left"
                                 android:layout_marginBottom="@dimen/lg_margin"
                                 android:paddingStart="@dimen/md_margin"
                                 android:paddingLeft="@dimen/md_margin"
                                 android:paddingEnd="@dimen/md_margin"
                                 android:paddingRight="@dimen/md_margin"
-                                android:text="Ad desctiption that advert about they add, description the app about the description the app about the plah plah ....."
+                                android:text="test"
+                                android:autoLink="web"
                                 android:textAlignment="gravity"
                                 android:textColor="@color/grayDarkTextColor"
                                 android:textStyle="bold"
-                                app:layout_constraintTop_toBottomOf="@+id/categorySperator" />
+                                app:layout_constraintTop_toBottomOf="@+id/deactivateBtn" />
                             
                             <android.support.constraint.ConstraintLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="0dp"
-                                app:layout_constraintBottom_toBottomOf="parent"
+                                android:layout_height="wrap_content"
                                 app:layout_constraintTop_toBottomOf="@+id/postDescription">
                                 
                                 <android.support.v7.widget.AppCompatButton
