--- a/app/src/main/res/layout/post_featured_item_layout.xml
+++ b/app/src/main/res/layout/post_featured_item_layout.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="@dimen/businessItemWidth"
+    
     android:layout_height="match_parent">
-
+    
     <!--<android.support.v7.widget.CardView-->
     <!--android:id="@+id/businessCard"-->
     <!--android:layout_width="match_parent"-->
@@ -15,16 +16,18 @@
     <!--app:cardPreventCornerOverlap="false"-->
     <!--app:cardUseCompatPadding="true"-->
     <!--app:contentPadding="@dimen/zero">-->
-
+    
+    
     <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/zero"
+        
         android:padding="@dimen/zero"
         app:ms9_shadowElevation="@dimen/lg_elevation">
-
+        
         <!--style="@style/commonNinePatchShadowContainerStyle"-->
-
+        
         <android.support.constraint.ConstraintLayout
             style="@style/commonNinePatchShadowItemViewStyle"
             android:layout_width="match_parent"
@@ -50,31 +53,34 @@
                 android:padding="@dimen/zero"
                 android:scaleType="center"
                 android:src="@drawable/ic_launcher_web" />
-
+            
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/postTitle"
-                style="@style/AppTheme.TitleTextAppearance"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/card_title_background"
+                android:fontFamily="@font/cairo_regular"
                 android:gravity="center"
                 android:shadowColor="@color/black"
                 android:shadowRadius="@integer/md_textShadow"
                 android:textAlignment="center"
                 android:textColor="@color/white"
+                android:textSize="16sp"
                 android:textStyle="bold"
+                
                 app:layout_constraintBottom_toBottomOf="parent" />
-
+        
         </android.support.constraint.ConstraintLayout>
     </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
     <!--android:layout_width="match_parent"-->
     <!--android:layout_height="match_parent"-->
     <!--android:layout_margin="@dimen/md_margin"-->
     <!--app:ms9_shadowElevation="@dimen/md_elevation">-->
-
-
+    
+    
     <!--<!jawad.sons.com.ninepatchlibrary.MaterialShadowContainerViewView>&ndash;&gt;-->
-
-
+    
+    
     <!--</android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
