--- a/app/src/main/res/layout/product_main_item_layout.xml
+++ b/app/src/main/res/layout/product_main_item_layout.xml
@@ -2,155 +2,168 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/postItemHeight">
+    android:layout_height="wrap_content">
     
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+    <com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/md_margin"
-        android:padding="0dp"
-        app:cardBackgroundColor="@color/colorPrimaryDark"
-        app:cardCornerRadius="10dp"
-        app:cardMaxElevation="@dimen/cardview_default_radius"
-        app:cardUseCompatPadding="true"
-        app:contentPadding="0dp"
-        
+        android:layout_margin="@dimen/zero"
+        android:background="@drawable/transparent_radius_bg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:ms9_shadowElevation="@dimen/lg_elevation">
         
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-           
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/md_margin"
+            app:cardCornerRadius="@dimen/cardview_default_radius"
+            app:cardMaxElevation="@dimen/cardview_default_radius"
+            app:cardUseCompatPadding="true"
+            app:contentPadding="0dp">
             
-            <ImageView
-                android:id="@+id/product_Image"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:contentDescription="@string/contentDescription"
-                android:scaleType="centerCrop"
-                
-                android:src="@drawable/product_place_holder"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                
-                app:layout_constraintTop_toTopOf="parent" />
-            
-            <TextView
-                android:id="@+id/product_Tag"
-                style="@style/AppTheme.TextAppearance"
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="@dimen/md_margin"
-                android:layout_marginBottom="@dimen/md_margin"
-                android:background="@color/colorPrimaryDark"
-                android:gravity="center"
-                android:maxLines="1"
-                android:paddingStart="@dimen/md_padding"
-                android:paddingLeft="@dimen/md_padding"
-                android:paddingTop="@dimen/md_padding"
-                android:paddingEnd="@dimen/md_padding"
-                android:paddingRight="@dimen/md_padding"
-                android:paddingBottom="@dimen/md_padding"
-                android:text="Post Tag"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@id/product_Image"
-                app:layout_constraintEnd_toEndOf="parent" />
-            
-            <TextView
-                android:id="@+id/product_Title"
-                style="@style/AppTheme.TextAppearance"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/md_margin"
-                android:paddingStart="@dimen/md_padding"
+                android:layout_height="wrap_content">
                 
-                android:paddingLeft="@dimen/md_padding"
-                android:paddingEnd="@dimen/md_padding"
-                android:paddingRight="@dimen/md_padding"
-                android:shadowColor="@color/lightGray"
-                android:shadowRadius="@integer/textShadow"
-                android:text="Post TestVeryLoooongName"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@id/product_Tag"
-                app:layout_constraintEnd_toStartOf="@id/product_Tag"
-                app:layout_constraintStart_toStartOf="parent"
-                 />
-            
-            <LinearLayout
-                android:id="@+id/product_Details_Container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@+id/product_Title">
+                
+                <ImageView
+                    android:id="@+id/product_Image"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="@string/contentDescription"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/product_place_holder"
+                    app:layout_constraintHeight_default="wrap"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_default="wrap" />
+                
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@drawable/card_title_background"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/product_Image"
+                    app:layout_constraintStart_toStartOf="@+id/product_Image"
+                    app:layout_constraintTop_toTopOf="@id/product_Title" />
                 
                 <TextView
-                    android:id="@+id/product_details"
-                    style="@style/AppTheme.TextAppearanceSmall"
-                    android:layout_width="match_parent"
+                    android:id="@+id/product_Tag"
+                    style="@style/AppTheme.TextAppearance"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:gravity="start"
-                    android:maxLines="6"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginTop="@dimen/md_margin"
+                    android:layout_marginBottom="@dimen/md_margin"
+                    android:background="@color/colorPrimaryDark"
+                    android:gravity="center"
+                    android:maxLines="1"
                     android:paddingStart="@dimen/md_padding"
+                    android:paddingLeft="@dimen/md_padding"
+                    android:paddingTop="@dimen/md_padding"
+                    android:paddingEnd="@dimen/md_padding"
+                    android:paddingRight="@dimen/md_padding"
+                    android:paddingBottom="@dimen/md_padding"
+                    android:text="Post Tag"
+                    android:textAlignment="gravity"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="@id/product_Image"
+                    app:layout_constraintEnd_toEndOf="parent" />
+                
+                <TextView
+                    android:id="@+id/product_Title"
+                    style="@style/AppTheme.TextAppearance"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/md_margin"
+                    android:paddingStart="@dimen/md_padding"
+                    
                     android:paddingLeft="@dimen/md_padding"
                     android:paddingEnd="@dimen/md_padding"
                     android:paddingRight="@dimen/md_padding"
                     android:shadowColor="@color/lightGray"
                     android:shadowRadius="@integer/textShadow"
-                    android:textAlignment="gravity"
-                    android:textColor="@color/grayDarkTextColor"
-                    android:textStyle="bold" />
-            
-            </LinearLayout>
-            
-            
-            <LinearLayout
-                android:id="@+id/locationLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:visibility="gone">
+                    android:text="Post TestVeryLoooongName"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="@id/product_Tag"
+                    app:layout_constraintEnd_toStartOf="@id/product_Tag"
+                    app:layout_constraintStart_toStartOf="parent" />
                 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/product_city"
+                <LinearLayout
+                    android:id="@+id/product_Details_Container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone"
+                    app:layout_constraintTop_toBottomOf="@+id/product_Title">
+                    
+                    <TextView
+                        android:id="@+id/product_details"
+                        style="@style/AppTheme.TextAppearanceSmall"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:gravity="start"
+                        android:maxLines="6"
+                        android:paddingStart="@dimen/md_padding"
+                        android:paddingLeft="@dimen/md_padding"
+                        android:paddingEnd="@dimen/md_padding"
+                        android:paddingRight="@dimen/md_padding"
+                        android:shadowColor="@color/lightGray"
+                        android:shadowRadius="@integer/textShadow"
+                        android:textAlignment="gravity"
+                        android:textColor="@color/grayDarkTextColor"
+                        android:textStyle="bold" />
                 
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/product_area"
+                </LinearLayout>
+                
+                
+                <LinearLayout
+                    android:id="@+id/locationLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            
-            </LinearLayout>
-    
-            <ImageView
-                android:id="@+id/editProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:visibility="gone">
+                    
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/product_city"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                    
+                    <android.support.v7.widget.AppCompatTextView
+                        android:id="@+id/product_area"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                
+                </LinearLayout>
+                
+                <ImageView
+                    android:id="@+id/editProduct"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:contentDescription="@string/contentDescription"
+                    android:src="@drawable/ic_edit_dark_24dp"
+                    
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </android.support.constraint.ConstraintLayout>
         
-                android:contentDescription="@string/contentDescription"
-                android:src="@drawable/ic_edit_dark_24dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-             
-                android:visibility="gone"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </android.support.constraint.ConstraintLayout>
-    
-    
-    </android.support.v7.widget.CardView>
+        
+        </android.support.v7.widget.CardView>
+    </com.sons.jawad.ninepatchlibrary.MaterialShadowContainerView>
+
 
 </android.support.constraint.ConstraintLayout>
