--- a/app/src/main/res/layout/toolbar_product_add_layout.xml
+++ b/app/src/main/res/layout/toolbar_product_add_layout.xml
@@ -9,13 +9,14 @@
     app:contentInsetEnd="70dp"
     app:contentInsetStart="0dp"
     app:popupTheme="@style/AppTheme.PopupOverlay">
-
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
+        
         <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/toolbarTitle"
             style="@style/AppTheme.TitleTextAppearance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,7 +26,7 @@
             android:text="@string/add_new_product"
             android:textColor="@color/black"
             android:textStyle="bold" />
-
+    
     </RelativeLayout>
 
 </android.support.v7.widget.Toolbar>
